[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splaz"
version = "0.1.2"
authors = [
  { name="João Braga", email="joaovab@al.insper.edu.br" },
]
description = "API para facilitar o acesso a dados LiDAR do GeoSampa"
readme = "README.md" # Faz o conteúdo do README aparecer na home do PyPI
requires-python = ">=3.10"
license = {file = "LICENSE"} # Vincula o arquivo de licença aos metadados
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas",
    "laspy",
    "requests",
    "shapely",
    "pyogrio",
    "geopy"
]

[project.urls]
"Homepage" = "https://github.com/Joaovabbr/splaz"
"Bug Tracker" = "https://github.com/Joaovabbr/splaz/issues"